--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,6 +5,7 @@
 	<head>
 		<title>@title</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))">
 	</head>
 	<body>
 		@content
