--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,9 +1,9 @@
-@(title: String)(content: Html)
+@(title: String = "")(content: Html)
 
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>@title</title>
+		<title>@if(!title.isEmpty){@title - }Follow The Money</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
