--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,9 +15,11 @@
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="@routes.Application.index">Follow The Money</a>
-				</div>
+				<a class="navbar-brand" href="@routes.Application.index">Follow The Money</a>
+				<ul class="nav navbar-nav">
+					<li><a href="@routes.Application.index">Home</a></li>
+					<li><a href="@routes.Category.index">Category</a></li>
+				</ul>
 			</div>
 		</nav>
 
