--- a/app/views/helper/bootstrapInlineInput.scala.html
+++ b/app/views/helper/bootstrapInlineInput.scala.html
@@ -1,6 +1,6 @@
 @(elements: helper.FieldElements)
 
-<div class="form-group@if(elements.hasErrors){ error}" title="@elements.infos(elements.lang).mkString(", ")">
+<div class="form-group@if(elements.hasErrors){ has-error}" title="@elements.infos(elements.lang).mkString(", ")">
 	<label class="sr-only" for="@elements.id">@elements.label</label>
 	@elements.input
 </div>
