--- a/app/views/expense.scala.html
+++ b/app/views/expense.scala.html
@@ -1,9 +1,30 @@
-@()
+@(expenses: Seq[Expense])
 
 @main("Expense") {
 	
 	<header class="page-header">
 		<h1>Expense</h1>
 	</header>
+
+	<table class="table table-bordered table-hover">
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Category</th>
+				<th>Description</th>
+				<th>Amount</th>
+			</tr>
+		</thead>
+		<tbody>
+			@for(e <- expenses) {
+				<tr>
+					<td>@e.readableDate</td>
+					<td>@e.id_category</td>
+					<td>@e.description</td>
+					<td>@e.amount</td>
+				</tr>	
+			}
+		</tbody>
+	</table>
 
 }
