--- a/app/views/helper/bootstrapHorizontalInput.scala.html
+++ b/app/views/helper/bootstrapHorizontalInput.scala.html
@@ -1,10 +1,6 @@
 @(elements: helper.FieldElements)
 
-@*<div class="form-group@if(elements.hasErrors){ has-error}" title="@elements.infos(elements.lang).mkString(", ")">
-	<label class="sr-only" for="@elements.id">@elements.label</label>
-	@elements.input
-</div>*@
-<div class="form-group">
+<div class="form-group@if(elements.hasErrors){ has-error}">
 	<label for="@elements.id" class="col-sm-2 control-label">@elements.label</label>
 	<div class="col-sm-10">
 		@elements.input
