--- a/app/views/expenseAdd.scala.html
+++ b/app/views/expenseAdd.scala.html
@@ -12,7 +12,7 @@
 		@inputDate(addForm("date"), 'class -> "form-control", '_label -> "Date", 'placeholder -> "Date")
 		@select(addForm("id_category"), categories, 'class -> "form-control", '_label -> "Category", 'placeholder -> "Category")
 		@inputText(addForm("description"), 'class -> "form-control", '_label -> "Description", 'placeholder -> "Description")
-		@inputText(addForm("amount"), 'class -> "form-control", '_label -> "Amount", 'placeholder -> "Amount")
+		@inputText(addForm("amount"), 'class -> "form-control", 'required -> None, '_label -> "Amount", 'placeholder -> "Amount")
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button type="submit" class="btn btn-success">Add</button>
