--- a/app/views/expenseAdd.scala.html
+++ b/app/views/expenseAdd.scala.html
@@ -1,23 +1,11 @@
 @(addForm: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])
-@import helper._
-@import helpers.bootstrapHorizontalHelper._
 
-@main("Expense") {
+@main("Add an expense") {
 	
 	<header class="page-header">
 		<h1>Add an expense</h1>
 	</header>
 
-	<form method="post" action="@routes.Expense.add" class="form-horizontal" role="form">
-		@inputDate(addForm("date"), 'class -> "form-control", '_label -> "Date", 'placeholder -> "Date")
-		@select(addForm("id_category"), categories, 'class -> "form-control", '_label -> "Category", 'placeholder -> "Category")
-		@inputText(addForm("description"), 'class -> "form-control", '_label -> "Description", 'placeholder -> "Description")
-		@inputText(addForm("amount"), 'class -> "form-control", 'required -> None, '_label -> "Amount", 'placeholder -> "Amount")
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button type="submit" class="btn btn-success">Add</button>
-			</div>
-		</div>
-	</form>
+	@expenseForm(addForm, categories, routes.Expense.add)
 
 }
