--- a/app/views/expenseEdit.scala.html
+++ b/app/views/expenseEdit.scala.html
@@ -1,9 +1,9 @@
 @(id: Long, form: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])
 
-@main("Add an expense") {
+@main("Edit an expense") {
 	
 	<header class="page-header">
-		<h1>Add an expense</h1>
+		<h1>Edit an expense</h1>
 	</header>
 
 	@expenseForm(form, categories, routes.Expense.edit(id))
