--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,20 @@
+@(form: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])
+
 @main() {
 
-	<h1>Follow The Money</h1>
+	<div class="jumbotron">
+		<h1>Follow The Money</h1>
+		<p>Keep track and analyze your expenses</p>
+		<p>
+			<a href="@routes.Category.index" class="btn btn-lg btn-primary">1. Create categories</a>
+			<a href="@routes.Expense.index" class="btn btn-lg btn-primary">2. Write down your expenses</a>
+			<a href="#" class="btn btn-lg btn-primary">3. Follow the money</a>
+		</p>
+	</div>
 
+	<div class="page-header">
+		<h2>Quick add</h2>
+	</div>
+	
+	@expenseForm(form, categories, routes.Expense.add)
 }
