Prepare for having several expense pages

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,7 +18,7 @@
 				<a class="navbar-brand" href="@routes.Application.index">Follow The Money</a>
 				<ul class="nav navbar-nav">
 					<li><a href="@routes.Application.index">Home</a></li>
-					<li><a href="@routes.Expense.index">Expense</a></li>
+					<li><a href="@routes.Expense.index()">Expense</a></li>
 					<li><a href="@routes.Category.index">Category</a></li>
 				</ul>
 			</div>
