--- a/app/views/expense.scala.html
+++ b/app/views/expense.scala.html
@@ -1,4 +1,4 @@
-@(expenses: Seq[(Expense, Option[Category])])
+@(expenses: Seq[(Expense, Option[Category])], page: (Int, Int))
 @import helper._
 
 @main("Expense") {
@@ -6,6 +6,9 @@
 	<header class="page-header">
 		<h1>Expense</h1>
 	</header>
+
+	<p>@page._1 / @page._2</p>
+	<p>@if(page._1 > 1){<a href="@routes.Expense.index(page._1 - 1)">previous</a>} @if(page._1 < page._2){<a href="@routes.Expense.index(page._1 + 1)">next</a>}</p>
 
 	<p><a href="@routes.Expense.addForm" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-plus-sign"></span> Add</a></p>
 
