Add basic analyze page

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,6 +20,7 @@
 					<li><a href="@routes.Application.index">Home</a></li>
 					<li><a href="@routes.Expense.index()">Expense</a></li>
 					<li><a href="@routes.Category.index">Category</a></li>
+					<li><a href="@routes.Analyze.index">Analyze</a></li>
 				</ul>
 			</div>
 		</nav>
