--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,7 +8,7 @@
 		<p>
 			<a href="@routes.Category.index" class="btn btn-lg btn-primary">1. Create categories</a>
 			<a href="@routes.Expense.index()" class="btn btn-lg btn-primary">2. Write down your expenses</a>
-			<a href="#" class="btn btn-lg btn-primary">3. Follow the money</a>
+			<a href="@routes.Analyze.index" class="btn btn-lg btn-primary">3. Follow the money</a>
 		</p>
 	</div>
 
