--- a/app/views/analyze.scala.html
+++ b/app/views/analyze.scala.html
@@ -1,4 +1,4 @@
-@(monthlyReports: Seq[controllers.Analyze.YearSummary])
+@(monthlyReports: Seq[models.MonthlyReport.YearSummary])
 @import helper._
 
 @main("Analyze") {
