Add a full Json export

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,7 @@
 			<a href="@routes.Expense.index()" class="btn btn-lg btn-primary">2. Write down your expenses</a>
 			<a href="@routes.Analyze.index" class="btn btn-lg btn-primary">3. Follow the money</a>
 		</p>
+		<p><a href="@routes.Api.export" class="btn btn-info"><i class="glyphicon glyphicon-export"></i> Export (Json)</a></p>
 	</div>
 
 	<div class="page-header">
