--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,18 +15,32 @@
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
-				<a class="navbar-brand" href="@routes.Application.index">Follow The Money</a>
-				<ul class="nav navbar-nav">
-					<li><a href="@routes.Application.index">Home</a></li>
-					<li><a href="@routes.Expense.index()">Expense</a></li>
-					<li><a href="@routes.Category.index">Category</a></li>
-					<li><a href="@routes.Analyze.index">Analyze</a></li>
-				</ul>
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="@routes.Application.index">Follow The Money</a>
+				</div>
+
+				<div class="collapse navbar-collapse" id="nav">
+					<ul class="nav navbar-nav">
+						<li><a href="@routes.Application.index">Home</a></li>
+						<li><a href="@routes.Expense.index()">Expense</a></li>
+						<li><a href="@routes.Category.index">Category</a></li>
+						<li><a href="@routes.Analyze.index">Analyze</a></li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 
-		<div class="container">
+		<article class="container">
 			@content
-		</div>
+		</article>
+
+		<script src="@routes.Assets.at("lib/jquery/jquery.min.js")"></script>
+		<script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"></script>
 	</body>
 </html>
