--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -13,11 +13,11 @@
 			</p>
 			<p><a href="@routes.Api.export" class="btn btn-info"><i class="glyphicon glyphicon-export"></i> Export (Json)</a></p>
 		</div>
-		<div class="show-xs">
-			<ul>
-				<li><a href="@routes.Category.index">1. Create categories</a></li>
-				<li><a href="@routes.Expense.index()">2. Write down your expenses</a></li>
-				<li><a href="@routes.Analyze.index">3. Follow the money</a></li>
+		<div class="visible-xs">
+			<ol>
+				<li><a href="@routes.Category.index">Create categories</a></li>
+				<li><a href="@routes.Expense.index()">Write down your expenses</a></li>
+				<li><a href="@routes.Analyze.index">Follow the money</a></li>
 			</ul>
 		</div>
 	</div>
