--- a/app/views/expense.scala.html
+++ b/app/views/expense.scala.html
@@ -40,15 +40,15 @@
 
 	<ul class="pager">
 		@if(page._1 <= 1) {
-			<li class="previous disabled"><a href="#">&larr; Older</a></li>
+			<li class="previous disabled"><a href="#">&larr; Newer</a></li>
 		} else {
-			<li class="previous"><a href="@routes.Expense.index(page._1 - 1)">&larr; Older</a></li>
+			<li class="previous"><a href="@routes.Expense.index(page._1 - 1)">&larr; Newer</a></li>
 		}
 		<li>@page._1 / @page._2</li>
 		@if(page._1 >= page._2) {
-			<li class="next disabled"><a href="#">Newer &rarr;</a></li>
+			<li class="next disabled"><a href="#">Older &rarr;</a></li>
 		} else {
-			<li class="next"><a href="@routes.Expense.index(page._1 + 1)">Newer &rarr;</a></li>
+			<li class="next"><a href="@routes.Expense.index(page._1 + 1)">Older &rarr;</a></li>
 		}
 	</ul>
 
