Update to Play 2.4.0

--- a/app/views/category.scala.html
+++ b/app/views/category.scala.html
@@ -1,4 +1,4 @@
-@(categories: Seq[Category], addForm: Form[String])
+@(categories: Seq[Category], addForm: Form[String])(implicit messages: Messages)
 @import helper._
 @import helpers.BootstrapInlineHelper._
 
