--- a/app/views/expense.scala.html
+++ b/app/views/expense.scala.html
@@ -1,4 +1,4 @@
-@(expenses: Seq[(Expense, Option[Category])], page: (Int, Int))
+@(expenses: Seq[(Expense, Option[Category])], page: (Int, Int))(implicit messages: Messages)
 @import helper._
 
 @main("Expense") {
