--- a/app/views/expenseEdit.scala.html
+++ b/app/views/expenseEdit.scala.html
@@ -1,4 +1,4 @@
-@(id: Long, form: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])
+@(id: Long, form: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])(implicit messages: Messages)
 
 @main("Edit an expense") {
 	
