--- a/app/views/expenseForm.scala.html
+++ b/app/views/expenseForm.scala.html
@@ -1,4 +1,4 @@
-@(addForm: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)], target: play.api.mvc.Call)
+@(addForm: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)], target: play.api.mvc.Call)(implicit messages: Messages)
 @import helper._
 @import helpers.bootstrapHorizontalHelper._
 
