--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])
+@(form: Form[controllers.Expense.ExpenseData], categories: Seq[(String, String)])(implicit messages: Messages)
 
 @main() {
 
