--- a/app/views/helper/inputNumber.scala.html
+++ b/app/views/helper/inputNumber.scala.html
@@ -1,5 +1,5 @@
-@(field: play.api.data.Field, args: (Symbol,Any)*)(implicit handler: FieldConstructor, lang: play.api.i18n.Lang)
+@(field: play.api.data.Field, args: (Symbol,Any)*)(implicit handler: FieldConstructor, messages: play.api.i18n.Messages)
 
 @input(field, args:_*) { (id, name, value, htmlArgs) =>
-	<input type="number" id="@id" name="@name" @toHtmlArgs(htmlArgs)>
+	<input type="number" id="@id" name="@name" value="@value"  @toHtmlArgs(htmlArgs)>
 }
